[gd_scene load_steps=49 format=3 uid="uid://bvxcdag6sea2g"]

[ext_resource type="Texture2D" uid="uid://dsnfrwyktrib4" path="res://Graphics/Enemies/flying_eye/Attack.png" id="1_654ts"]
[ext_resource type="Script" uid="uid://6d8rj62xaybd" path="res://Scenes/characters/enemy_flyingeye.gd" id="1_y70wm"]
[ext_resource type="Texture2D" uid="uid://2kyr7boghpa1" path="res://Graphics/Enemies/flying_eye/Death.png" id="2_bps47"]
[ext_resource type="PackedScene" uid="uid://cal2fimjt237m" path="res://Scenes/Particles/red_blood_particle.tscn" id="2_q6int"]
[ext_resource type="Texture2D" uid="uid://nhs5l3wbc4ms" path="res://Graphics/Enemies/flying_eye/Take Hit.png" id="3_ins8h"]
[ext_resource type="Texture2D" uid="uid://byndem65h2ttj" path="res://Graphics/Enemies/flying_eye/Flight.png" id="4_ggna4"]
[ext_resource type="AudioStream" uid="uid://rc28vk3ehju1" path="res://Sounds/sfx/eyewingflap.mp3" id="6_xr7j0"]
[ext_resource type="AudioStream" uid="uid://kn7uv6rojgbw" path="res://Sounds/sfx/eyehit.mp3" id="7_1xsgx"]
[ext_resource type="AudioStream" uid="uid://dl6lwf826fimx" path="res://Sounds/sfx/eyedeath.mp3" id="8_uc5ba"]
[ext_resource type="AudioStream" uid="uid://dij8510ybnhx0" path="res://Sounds/sfx/skelpunch.mp3" id="9_xm8fx"]
[ext_resource type="AudioStream" uid="uid://buhve474iuhm5" path="res://Sounds/sfx/swordslash.mp3" id="10_q6int"]

[sub_resource type="AtlasTexture" id="AtlasTexture_6jijr"]
atlas = ExtResource("1_654ts")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_38we4"]
atlas = ExtResource("1_654ts")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_i7dvh"]
atlas = ExtResource("1_654ts")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_85fi6"]
atlas = ExtResource("1_654ts")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_gqcl7"]
atlas = ExtResource("1_654ts")
region = Rect2(600, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_ck6u8"]
atlas = ExtResource("1_654ts")
region = Rect2(750, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_tmfa1"]
atlas = ExtResource("1_654ts")
region = Rect2(900, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_jocmh"]
atlas = ExtResource("1_654ts")
region = Rect2(1050, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_4h6hw"]
atlas = ExtResource("2_bps47")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_k8x0w"]
atlas = ExtResource("2_bps47")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_0umw8"]
atlas = ExtResource("2_bps47")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_y2xx4"]
atlas = ExtResource("2_bps47")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_r628g"]
atlas = ExtResource("3_ins8h")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_4f7i0"]
atlas = ExtResource("3_ins8h")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_0rss6"]
atlas = ExtResource("3_ins8h")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_alct3"]
atlas = ExtResource("3_ins8h")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_x184l"]
atlas = ExtResource("4_ggna4")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_6im6t"]
atlas = ExtResource("4_ggna4")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_l5034"]
atlas = ExtResource("4_ggna4")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_dardk"]
atlas = ExtResource("4_ggna4")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_uwpkx"]
atlas = ExtResource("4_ggna4")
region = Rect2(600, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_m7mra"]
atlas = ExtResource("4_ggna4")
region = Rect2(750, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_e352n"]
atlas = ExtResource("4_ggna4")
region = Rect2(900, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_vtq5h"]
atlas = ExtResource("4_ggna4")
region = Rect2(1050, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_wnpvy"]
atlas = ExtResource("4_ggna4")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_y70wm"]
atlas = ExtResource("4_ggna4")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_q6int"]
atlas = ExtResource("4_ggna4")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_r2bhe"]
atlas = ExtResource("4_ggna4")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_ts6n1"]
atlas = ExtResource("4_ggna4")
region = Rect2(600, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_60icy"]
atlas = ExtResource("4_ggna4")
region = Rect2(750, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_yxlvt"]
atlas = ExtResource("4_ggna4")
region = Rect2(900, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_7bmjf"]
atlas = ExtResource("4_ggna4")
region = Rect2(1050, 0, 150, 150)

[sub_resource type="SpriteFrames" id="SpriteFrames_cy5x1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6jijr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_38we4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i7dvh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_85fi6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gqcl7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ck6u8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tmfa1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jocmh")
}],
"loop": false,
"name": &"attack",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4h6hw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k8x0w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0umw8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y2xx4")
}],
"loop": false,
"name": &"death",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r628g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4f7i0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0rss6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_alct3")
}],
"loop": false,
"name": &"hit",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x184l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6im6t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l5034")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dardk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uwpkx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m7mra")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e352n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vtq5h")
}],
"loop": false,
"name": &"idle",
"speed": 13.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wnpvy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y70wm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q6int")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r2bhe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ts6n1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_60icy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yxlvt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7bmjf")
}],
"loop": true,
"name": &"run",
"speed": 18.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_xlhvc"]
radius = 16.0

[sub_resource type="CircleShape2D" id="CircleShape2D_y70wm"]
radius = 152.21

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y70wm"]
bg_color = Color(0.180005, 0.180005, 0.180005, 0.686275)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.0885599, 0.0885599, 0.0885598, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
expand_margin_left = 1.0
expand_margin_top = 1.0
expand_margin_right = 1.0
expand_margin_bottom = 1.0
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q6int"]
bg_color = Color(0.513753, 1.09497e-06, 3.36915e-07, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
anti_aliasing = false

[node name="node_flyingeye" type="CharacterBody2D" node_paths=PackedStringArray("sprite", "raycast", "nav", "collision", "los", "time_to_forget", "health_bar", "sound_run", "sound_hit", "sound_attack", "sound_death")]
scale = Vector2(2, 2)
collision_layer = 4
collision_mask = 11
motion_mode = 1
script = ExtResource("1_y70wm")
health = 10
max_health = 10
damage = 10
speed = 120
score_reward = 200
sprite = NodePath("AnimatedSprite2D")
raycast = NodePath("RayCast2D")
nav = NodePath("NavigationAgent2D")
collision = NodePath("collision")
los = NodePath("LosArea")
time_to_forget = NodePath("LosArea/ForgetMeAggro")
health_bar = NodePath("HealthBar")
is_flying = true
sound_run = NodePath("Audio/WingFlap")
sound_hit = NodePath("Audio/Hit")
sound_attack = NodePath("Audio/Attack")
sound_death = NodePath("Audio/Death")
hit_particle = ExtResource("2_q6int")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_cy5x1")
animation = &"run"
frame = 6
frame_progress = 0.572452

[node name="RayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(0, 0)
collision_mask = 2

[node name="collision" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_xlhvc")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
debug_enabled = true

[node name="LosArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="LosArea"]
position = Vector2(4, 0)
shape = SubResource("CircleShape2D_y70wm")
debug_color = Color(0, 0.6, 0.701961, 0)

[node name="ForgetMeAggro" type="Timer" parent="LosArea"]
unique_name_in_owner = true
wait_time = 2.0
one_shot = true

[node name="Audio" type="Node2D" parent="."]

[node name="WingFlap" type="AudioStreamPlayer2D" parent="Audio"]
unique_name_in_owner = true
stream = ExtResource("6_xr7j0")
volume_db = -5.0

[node name="Attack" type="AudioStreamPlayer2D" parent="Audio"]
unique_name_in_owner = true
stream = ExtResource("7_1xsgx")

[node name="Death" type="AudioStreamPlayer2D" parent="Audio"]
unique_name_in_owner = true
stream = ExtResource("8_uc5ba")

[node name="Hit" type="AudioStreamPlayer2D" parent="Audio"]
unique_name_in_owner = true
stream = ExtResource("10_q6int")

[node name="Attack_2" type="AudioStreamPlayer2D" parent="Audio"]
unique_name_in_owner = true
stream = ExtResource("9_xm8fx")
bus = &"SFX"

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = -20.0
offset_top = -23.0
offset_right = 20.0
offset_bottom = -18.0
theme_override_styles/background = SubResource("StyleBoxFlat_y70wm")
theme_override_styles/fill = SubResource("StyleBoxFlat_q6int")
max_value = 20.0
step = 1.0
value = 10.0
show_percentage = false

[connection signal="animation_changed" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_changed"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="frame_changed" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_frame_changed"]
[connection signal="body_exited" from="LosArea" to="." method="_on_los_area_body_exited"]
[connection signal="timeout" from="LosArea/ForgetMeAggro" to="." method="_on_forget_me_aggro_timeout"]
